<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>md_controller</name>
  <version>0.0.0</version>
  <description>motor controller example</description>
  <maintainer email="cjungho0215@naver.com">Jung ho</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>serial</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
